GNOME Bugzilla – Bug 734328
Null check missing at two locations.
Last modified: 2014-08-07 03:20:16 UTC
Created attachment 282627 [details] [review] Couple of Missing Null checks. Missing Null check could cause crash, if a pointer is dereferenced. Found problem at two places in valid.c Apply attached patch.
ACK applied and pushed as commit 658b86c0eaacefb0999873efb883c7e50c628d18 thanks ! Daniel